GPUState: Fix scissor state being overwritten when changing scissor bounds

Fix T79899 viewport artifacts when sculpting